--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,7 @@ jobs:
       run: |
         cd gnat-llvm
         git clone https://git.savannah.gnu.org/git/gcc.git llvm-interface/gcc --single-branch --depth=1
-        ln -s llvm-interface/gcc/gcc/ada llvm-interface/gnat_src
-
+        ln -s gcc/gcc/ada llvm-interface/gnat_src
     - name: Clone LLVM Ada bindings
       shell: msys2 {0}
       run: |
