--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Clone GCC Ada sources
       shell: msys2 {0}
       run: |
-        pacman -U https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-llvm-19.1.7-1-any.pkg.tar.zst \
+        pacman -U --noconfirm https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-llvm-19.1.7-1-any.pkg.tar.zst \
                   https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-llvm-libs-19.1.7-1-any.pkg.tar.zst \
                   https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-clang-19.1.7-1-any.pkg.tar.zst \
                   https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-clang-libs-19.1.7-1-any.pkg.tar.zst
