--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build GNAT LLVM for AArch64 Windows MinGW
+name: Build GNAT LLVM for AArch64 Windows MinGW Cross-Compile
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout GNAT LLVM
@@ -17,44 +17,33 @@ jobs:
         repository: AdaCore/gnat-llvm
         path: gnat-llvm
 
-    - name: Setup MSYS2
-      uses: msys2/setup-msys2@v2
-      with:
-        msystem: MINGW64
-        update: true
-        install: >-
-          git
-          make
-          base-devel
-          mingw-w64-x86_64-gcc-ada
-          mingw-w64-x86_64-gprbuild
+    - name: Install dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y git make cmake gnat-11 g++-11 python3 zlib1g-dev libmpfr-dev libgmp-dev libmpc-dev
 
     - name: Clone GCC Ada sources
-      shell: msys2 {0}
       run: |
-        pacman -U --noconfirm https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-llvm-19.1.7-1-any.pkg.tar.zst \
-                  https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-llvm-libs-19.1.7-1-any.pkg.tar.zst \
-                  https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-clang-19.1.7-1-any.pkg.tar.zst \
-                  https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-clang-libs-19.1.7-1-any.pkg.tar.zst
-                         
         cd gnat-llvm
-        git clone git://gcc.gnu.org/git/gcc.git llvm-interface/gcc --single-branch --depth=1
+        git clone git://gcc.gnu.org/git/gcc.git llvm-interface/gcc
         ln -s gcc/gcc/ada llvm-interface/gnat_src
 
     - name: Clone LLVM Ada bindings
-      shell: msys2 {0}
       run: |
         cd gnat-llvm
         git clone https://github.com/AdaCore/llvm-bindings.git
 
+    - name: Build LLVM from source
+      run: |
+        cd gnat-llvm
+        make llvm
+
     - name: Build GNAT LLVM
-      shell: msys2 {0}
       run: |
         cd gnat-llvm
         make
 
     - name: Test targeting AArch64 Windows MinGW
-      shell: msys2 {0}
       run: |
         cd gnat-llvm
         export PATH=$PWD/llvm-interface/bin:$PATH
